# zarchiver

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  categories.md  configuration.md  scraping.md  usage.md
scripts/: category_stats.py  generate_category_pages.py
src/zarchiver/: __init__.py  cli.py  config.py  ingest.py  logging_setup.py  models.py  pipeline.py  serialize.py
src/zarchiver/ai/: __init__.py  base.py  deepseek.py  summarizer.py
src/zarchiver/exporters/: __init__.py  assets.py  base.py  comments.py  formulas.py  html.py  obsidian.py
src/zarchiver/sources/: __init__.py  base.py
src/zarchiver/sources/zhihu/: __init__.py  browser.py  comments.py  parser.py  source.py  urls.py  video.py
src/zarchiver/store/: __init__.py
tests/: test_ai.py  test_assets_offline.py  test_comments.py  test_exporters.py  test_generate_category_pages.py  test_ingest.py  test_pipeline.py  test_serialize.py  test_store.py  test_video.py  test_zhihu.py
tests/fixtures/: answer_sample.html  article_35562420.html  article_formula.html  article_gif_679061686.html  article_references.html  article_video_1993765835039342710.html  pin_2000653466067043281.html
